<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newname" />

    <EditText
        android:id="@+id/editTextNewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newage"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savechanges" />

</LinearLayout>